Cycles Tube Mapping off / not compatible with BI #44548

Closed
opened 2015-04-29 17:36:02 +02:00 by Gottfried Hofmann · 6 comments

System Information
Operating system and graphics card

Ubuntu 14.04 LTS 64bit Geforce 580

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)

274 Release

Worked: None :(

Short description of error

This is how tube mapping for images with generated coords looks in BI: http://www.pasteall.org/pic/87482 (correct, take a look at the 2nd cylinder)
And this is how it looks in Cycles: http://www.pasteall.org/pic/87481 (totally off, and I don't know how to fix this / how to get tube mapping in Cycles at all)

Note: Sphere mapping looks identical in BI and Cycles...

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  • Open attached .blend : mapping.tube.bug.blend
  • Set view to rendered
  • Switch between Cycles and BI (deselect "use nodes" for BI)
**System Information** Operating system and graphics card Ubuntu 14.04 LTS 64bit Geforce 580 **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) 274 Release Worked: None :( **Short description of error** This is how tube mapping for images with generated coords looks in BI: http://www.pasteall.org/pic/87482 (correct, take a look at the 2nd cylinder) And this is how it looks in Cycles: http://www.pasteall.org/pic/87481 (totally off, and I don't know how to fix this / how to get tube mapping in Cycles at all) Note: Sphere mapping looks identical in BI and Cycles... **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps * Open attached .blend : [mapping.tube.bug.blend](https://archive.blender.org/developer/F168000/mapping.tube.bug.blend) * Set view to rendered * Switch between Cycles and BI (deselect "use nodes" for BI)

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Gottfried Hofmann 2015-04-29 17:36:02 +02:00

Added subscriber: @GottfriedHofmann

Added subscriber: @GottfriedHofmann

This issue was referenced by 41d817f15d

This issue was referenced by 41d817f15da2bfb0423612d6ba1d464e8a983bb9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 41d817f15d.

Closed by commit 41d817f15d.

This issue was referenced by blender/cycles@4d3b9a34de

This issue was referenced by blender/cycles@4d3b9a34de58eb353492ea637411339e3c11cd18
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44548
No description provided.