Fix T44548: Cycles Tube Mapping off / not compatible with BI

Was a typo in original implementation, probably a result of some code reshuffle
happened for optimization reasons.